apps/hash-graph/lib/query-builder-derive/tests/ui/fail/next_on_complex.stderr
error: unexpected attribute `next` on complex variant
 --> tests/ui/fail/next_on_complex.rs:6:5
  |
6 |     Nested { a: u8, b: u16 },
  |     ^^^^^^
